[gd_scene load_steps=3 format=3 uid="uid://bgnd3tjeblqon"]

[ext_resource type="Script" path="res://Scripts/game.gd" id="1_gxek6"]
[ext_resource type="PackedScene" uid="uid://ccoyiufegglom" path="res://Scenes/object.tscn" id="2_hq57k"]

[node name="Game" type="Node2D"]
script = ExtResource("1_gxek6")
object_scene = ExtResource("2_hq57k")

[node name="Background" type="ColorRect" parent="."]
visible = false
custom_minimum_size = Vector2(480, 480)
offset_right = 480.0
offset_bottom = 480.0

[node name="Start" type="Button" parent="."]
custom_minimum_size = Vector2(100, 40)
offset_left = 190.0
offset_top = 300.0
offset_right = 290.0
offset_bottom = 340.0
text = "Start
"

[node name="Restart" type="Button" parent="."]
visible = false
custom_minimum_size = Vector2(100, 40)
offset_left = 190.0
offset_top = 300.0
offset_right = 290.0
offset_bottom = 340.0
text = "Restart
"

[node name="TargetColor" type="ColorRect" parent="."]
offset_left = 208.0
offset_top = 520.0
offset_right = 272.0
offset_bottom = 584.0

[node name="Lives" type="Label" parent="."]
custom_minimum_size = Vector2(100, 40)
offset_left = 16.0
offset_top = 16.0
offset_right = 116.0
offset_bottom = 56.0
text = "Lives: 3"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Score" type="Label" parent="."]
custom_minimum_size = Vector2(100, 40)
offset_left = 364.0
offset_top = 16.0
offset_right = 464.0
offset_bottom = 56.0
text = "Score: 0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameEndMessage" type="Label" parent="."]
visible = false
custom_minimum_size = Vector2(200, 40)
offset_left = 140.0
offset_top = 240.0
offset_right = 340.0
offset_bottom = 280.0
text = "Game ended"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SpawnTimer" type="Timer" parent="."]

[connection signal="pressed" from="Start" to="." method="_on_start_pressed"]
[connection signal="pressed" from="Restart" to="." method="_on_restart_pressed"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
